c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/invalid_struct_declaration/duplicate_member_name.c
struct s {
  // can't declare two members with same name
  int x;
  double x;
};